# structables

./: .env.example  .gitignore  Dockerfile  README.md  cronjob.txt  docker-compose-example-dev.yml  docker-compose-example.yml  docker-compose.yml  entrypoint.sh  instances.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.forgejo/workflows/: docker.yml  release.yml
src/structables/: config.py  main.py
src/structables/routes/: __init__.py  category.py  contest.py  main.py  member.py  proxy.py
src/structables/static/css/: iframe.css  style.css
src/structables/templates/: 429.html  500.html  archives.html  article-review.html  base.html  category.html  collection.html  contest.html  contests.html  footer.html  header.html  iframe.html  index.html  member-instructables.html  member.html  privacypolicy.html  projects.html  sitemap.html
src/structables/utils/: data.py  helpers.py
static/css/: style.css
static/img/: favicon.xcf  logo.xcf
templates/: 400.html  404.html  429.html  500.html  archives.html  article-review.html  article.html  base.html  category.html  collection.html  contest.html  contests.html  footer.html  header.html  index.html  member-instructables.html  member.html  privacypolicy.html  privacypolicy.txt  projects.html  sitemap.html  style.html
